--- a/TodoList/App/Base.lproj/Main.storyboard
+++ b/TodoList/App/Base.lproj/Main.storyboard
@@ -37,7 +37,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RAO-Lg-Dxa">
-                                                    <rect key="frame" x="360" y="14" width="34" height="30"/>
+                                                    <rect key="frame" x="360" y="14" width="34" height="22"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="34" id="12g-Hf-7rO"/>
                                                         <constraint firstAttribute="height" constant="30" id="uJG-Ry-Nw5"/>
@@ -49,11 +49,16 @@
                                                 <constraint firstItem="RAO-Lg-Dxa" firstAttribute="top" secondItem="iUr-sO-KYh" secondAttribute="topMargin" constant="3" id="4ng-D6-c9r"/>
                                                 <constraint firstItem="dos-gx-iBZ" firstAttribute="top" secondItem="iUr-sO-KYh" secondAttribute="top" constant="11" id="5Au-h1-zDw"/>
                                                 <constraint firstItem="dos-gx-iBZ" firstAttribute="leading" relation="lessThanOrEqual" secondItem="iUr-sO-KYh" secondAttribute="leading" constant="40" id="C0w-fz-JcL"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="RAO-Lg-Dxa" secondAttribute="bottom" constant="11" id="gyJ-yD-cJi"/>
                                                 <constraint firstAttribute="bottom" secondItem="dos-gx-iBZ" secondAttribute="bottom" constant="11" id="mNR-sc-wCj"/>
                                                 <constraint firstItem="RAO-Lg-Dxa" firstAttribute="trailing" secondItem="iUr-sO-KYh" secondAttribute="trailingMargin" id="ndr-H3-geC"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <outlet property="checkImage" destination="RAO-Lg-Dxa" id="d4P-n2-9nr"/>
+                                            <outlet property="todoItem" destination="dos-gx-iBZ" id="DLP-xE-FIc"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -67,7 +72,15 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bOW-5e-hHC" secondAttribute="bottom" id="TlZ-XI-iKD"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="lVT-hb-sV3"/>
+                    <navigationItem key="navigationItem" id="lVT-hb-sV3">
+                        <barButtonItem key="leftBarButtonItem" title="Edit" id="qvb-0G-wcf"/>
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="Yru-QS-3DA">
+                            <connections>
+                                <action selector="addBarButtonItem:" destination="BYZ-38-t0r" id="MDZ-ow-f6D"/>
+                                <segue destination="JT5-g3-RG4" kind="show" id="Po0-CD-bEM"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableview" destination="bOW-5e-hHC" id="oaT-7U-skO"/>
                     </connections>
@@ -75,6 +88,52 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1042.0289855072465" y="-34.151785714285715"/>
+        </scene>
+        <!--Add Item View Controller-->
+        <scene sceneID="L1R-BQ-PhD">
+            <objects>
+                <viewController id="JT5-g3-RG4" customClass="AddItemViewController" customModule="TodoList" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="i9M-L6-aUL">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type something here..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HXG-rj-3po">
+                                <rect key="frame" x="20" y="92" width="374" height="50"/>
+                                <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="cxe-VE-Gbq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xKE-CN-cZh">
+                                <rect key="frame" x="20" y="150" width="374" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="H0b-Pa-Rc8"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="SAVE">
+                                    <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="18"/>
+                                </buttonConfiguration>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="0Ry-pt-wy3"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="xKE-CN-cZh" firstAttribute="width" secondItem="HXG-rj-3po" secondAttribute="width" id="BiW-KO-q3w"/>
+                            <constraint firstItem="HXG-rj-3po" firstAttribute="top" secondItem="0Ry-pt-wy3" secondAttribute="top" id="H1h-1b-C9K"/>
+                            <constraint firstItem="xKE-CN-cZh" firstAttribute="trailing" secondItem="HXG-rj-3po" secondAttribute="trailing" id="LVG-H0-OFv"/>
+                            <constraint firstItem="0Ry-pt-wy3" firstAttribute="trailing" secondItem="HXG-rj-3po" secondAttribute="trailing" constant="20" id="eNR-bf-7SH"/>
+                            <constraint firstItem="xKE-CN-cZh" firstAttribute="top" secondItem="HXG-rj-3po" secondAttribute="bottom" constant="8" symbolic="YES" id="fvs-si-YH2"/>
+                            <constraint firstItem="xKE-CN-cZh" firstAttribute="leading" secondItem="HXG-rj-3po" secondAttribute="leading" id="lzA-3R-bjC"/>
+                            <constraint firstItem="HXG-rj-3po" firstAttribute="leading" secondItem="0Ry-pt-wy3" secondAttribute="leading" constant="20" id="wkr-Qj-Gf9"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="sw6-f4-6X9"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WDt-l0-zCd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2005.7971014492755" y="-34.151785714285715"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="FKS-fK-LRE">
@@ -98,6 +157,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
